--- a/Proyecto_Grupo3/CS/.settings
+++ b/Proyecto_Grupo3/CS/.settings
@@ -17,6 +17,6 @@
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
   <joinCluster>true</joinCluster>
-  <nodeString>CS</nodeString>
+  <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
 </project>
