--- a/OM/.settings
+++ b/OM/.settings
@@ -4,7 +4,7 @@
   <applicationString>OM</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <breakpointMap>
-    <breakpoint key="IO.procesaOrden">0</breakpoint>
+    <breakpoint key="Core.dummy">0</breakpoint>
   </breakpointMap>
   <databasesMap>
     <databases key="PROYECTO" type=".configdb">
