Actualizacion de JAR

--- a/Proyecto_Grupo3/Order Manager/OM/.settings
+++ b/Proyecto_Grupo3/Order Manager/OM/.settings
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project>
-  <DefaultDB>TRAIN</DefaultDB>
-  <applicationString>cbio</applicationString>
+  <DefaultDB>TRAIN2</DefaultDB>
+  <applicationString>train2</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <databasesMap>
-    <databases key="TRAIN" type=".configdb">
-      <dbname>TRAIN</dbname>
+    <databases key="TRAIN2" type=".configdb">
+      <dbname>TRAIN2</dbname>
       <driver type=".dbdriver">
         <attributes>localhost;1521;orcl;false</attributes>
         <driverType>Oracle thin</driverType>
       </driver>
-      <password>49A225C3CBCC77BF5347C8B21011B9E7</password>
-      <user>c##train</user>
+      <password>5DC5700840C7B835</password>
+      <user>c##train2</user>
     </databases>
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
   <jarFolder>D:\</jarFolder>
-  <nodeString>cbio</nodeString>
+  <joinCluster>true</joinCluster>
+  <nodeString>train2</nodeString>
   <skin>Enterprise</skin>
 </project>
