--- a/OM/.settings
+++ b/OM/.settings
@@ -3,6 +3,9 @@
   <DefaultDB>PROYECTO</DefaultDB>
   <applicationString>OM</applicationString>
   <applicationVersionString>1</applicationVersionString>
+  <breakpointMap>
+    <breakpoint key="OM_CORE.dummy">0</breakpoint>
+  </breakpointMap>
   <databasesMap>
     <databases key="PROYECTO" type=".configdb">
       <dbname>PROYECTO</dbname>
