--- a/OM/.settings
+++ b/OM/.settings
@@ -19,7 +19,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>C:\Users\EOC\Documents\ritacademy_chile_entel\OM\</jarExportFolder>
+  <jarExportFolder>C:\Users\grojas\Documents\ritacademy_chile_entel\OM\</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
