--- a/Proyecto_Grupo3/EMA/.settings
+++ b/Proyecto_Grupo3/EMA/.settings
@@ -16,7 +16,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>E:\Proyecto\EMA</jarExportFolder>
+  <jarExportFolder>E:\ProyectoG3_\Proyecto_Grupo3\EMA</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
