--- a/Proyecto_Grupo3/Order Entry/.settings
+++ b/Proyecto_Grupo3/Order Entry/.settings
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project>
-  <DefaultDB>TRAIN_2</DefaultDB>
+  <DefaultDB>TRAIN2</DefaultDB>
   <applicationString>TRAINING METADATA</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <databasesMap>
-    <databases key="TRAIN_2" type=".configdb">
-      <dbname>TRAIN_2</dbname>
+    <databases key="TRAIN2" type=".configdb">
+      <dbname>TRAIN2</dbname>
       <driver type=".dbdriver">
         <attributes>localhost;1521;orcl;false</attributes>
         <driverType>Oracle thin</driverType>
       </driver>
-      <password>49A225C3CBCC77BF5347C8B21011B9E7</password>
-      <user>C##TRAIN_2</user>
+      <password>5DC5700840C7B835</password>
+      <user>C##TRAIN2</user>
     </databases>
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
+  <joinCluster>true</joinCluster>
   <joinClusterPeUi>false</joinClusterPeUi>
-  <nodeString>PE_UI</nodeString>
+  <nodeString>TRAINING METADATA</nodeString>
   <skin>Enterprise</skin>
 </project>
