--- a/BSCS/.settings
+++ b/BSCS/.settings
@@ -16,7 +16,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>C:\Users\lapalma\Documents\ritacademy_chile_entel\BSCS\</jarExportFolder>
+  <jarExportFolder>C:\Users\EOC\Documents\ritacademy_chile_entel\BSCS\</jarExportFolder>
   <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
 </project>
