--- a/Proyecto_Grupo3/Order Entry/.settings
+++ b/Proyecto_Grupo3/Order Entry/.settings
@@ -10,14 +10,13 @@
         <attributes>localhost;1521;orcl;false</attributes>
         <driverType>Oracle thin</driverType>
       </driver>
-      <password>5DC5700840C7B835</password>
-      <user>C##TRAIN2</user>
+      <password>49A225C3CBCC77BF5347C8B21011B9E7</password>
+      <user>C##TRAIN_2</user>
     </databases>
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <joinCluster>true</joinCluster>
   <joinClusterPeUi>false</joinClusterPeUi>
-  <nodeString>TRAINING METADATA</nodeString>
+  <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
 </project>
