--- a/Proyecto_Grupo3/Procesos/OM/.settings
+++ b/Proyecto_Grupo3/Procesos/OM/.settings
@@ -21,6 +21,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
+  <jarExportFolder>E:\ProyectoG3_\Proyecto_Grupo3\Procesos\OM\</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
