--- a/Proyecto_Grupo3/Procesos/CSProcess/.settings
+++ b/Proyecto_Grupo3/Procesos/CSProcess/.settings
@@ -21,6 +21,6 @@
   <excludedResource>.svn</excludedResource>
   <jarExportFolder>E:\ProyectoG3_\Proyecto_Grupo3\Procesos\CSProcess</jarExportFolder>
   <joinCluster>true</joinCluster>
-  <nodeString>PE_UI</nodeString>
+  <nodeString>CS</nodeString>
   <skin>Enterprise</skin>
 </project>
