--- a/Proyecto_Grupo3/Procesos/OM/.settings
+++ b/Proyecto_Grupo3/Procesos/OM/.settings
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project>
   <DefaultDB>TRAIN2</DefaultDB>
-  <applicationString>cbio</applicationString>
+  <applicationString>train2</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <breakpointMap>
     <breakpoint key="Start.CreaCliBSCS.CreaCliCS.ProvisionCliEMA.Responder.InformacionOE.cwOnProcActAfter.orderManager.OMProcess">0</breakpoint>
     <breakpoint key="Start.CreaCliBSCS.CreaCliCS.ProvisionCliEMA.Responder.InformacionOE.cwOnProcActBefore.orderManager.OMProcess">0</breakpoint>
-    <breakpoint key="bscsProy.ScriptConsumo">0</breakpoint>
   </breakpointMap>
   <databasesMap>
     <databases key="TRAIN2" type=".configdb">
@@ -15,13 +14,13 @@
         <attributes>localhost;1521;orcl;false</attributes>
         <driverType>Oracle thin</driverType>
       </driver>
-      <password>49A225C3CBCC77BF5347C8B21011B9E7</password>
-      <user>c##train</user>
+      <password>5DC5700840C7B835</password>
+      <user>c##train2</user>
     </databases>
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>E:\ProyectoG3_\Proyecto_Grupo3\Procesos\OM\</jarExportFolder>
+  <jarExportFolder>E:\protecto_grp3\Proyecto_Grupo3\Procesos\OM\</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
