--- a/Proyecto_Grupo3/Procesos/Order Entry/.settings
+++ b/Proyecto_Grupo3/Procesos/Order Entry/.settings
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project>
   <DefaultDB>TRAIN2</DefaultDB>
-  <applicationString>OE</applicationString>
+  <applicationString>TRAINING METADATA</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <breakpointMap>
     <breakpoint key="provisionManagement.dummy">0</breakpoint>
@@ -13,13 +13,13 @@
         <attributes>localhost;1521;orcl;false</attributes>
         <driverType>Oracle thin</driverType>
       </driver>
-      <password>49A225C3CBCC77BF5347C8B21011B9E7</password>
-      <user>C##TRAIN</user>
+      <password>5DC5700840C7B835</password>
+      <user>C##TRAIN2</user>
     </databases>
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
   <joinCluster>true</joinCluster>
-  <nodeString>OE</nodeString>
+  <nodeString>PE_UI</nodeString>
   <skin>Enterprise</skin>
 </project>
