--- a/OrderManager/.settings
+++ b/OrderManager/.settings
@@ -4,6 +4,7 @@
   <applicationString>ProyectoCobras_OM</applicationString>
   <applicationVersionString>1</applicationVersionString>
   <breakpointMap>
+    <breakpoint key="EOC_OE.debug">0</breakpoint>
     <breakpoint key="OrderManager.debug">0</breakpoint>
   </breakpointMap>
   <databasesMap>
