--- a/Proyecto_Grupo3/Procesos/BSCS/.settings
+++ b/Proyecto_Grupo3/Procesos/BSCS/.settings
@@ -28,7 +28,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>E:\ProyectoVelocity\Proyecto_Grupo3\Procesos\BSCS</jarExportFolder>
+  <jarExportFolder>E:\protecto_grp3\Proyecto_Grupo3\Procesos\BSCS\</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>BSCS_train</nodeString>
   <skin>Enterprise</skin>
