--- a/Proyecto_Grupo3/Procesos/CSProcess/.settings
+++ b/Proyecto_Grupo3/Procesos/CSProcess/.settings
@@ -19,7 +19,7 @@
   </databasesMap>
   <excludedBuildWar>.bak</excludedBuildWar>
   <excludedResource>.svn</excludedResource>
-  <jarExportFolder>D:\ProyectoVelocity\Proyecto_Grupo3\Procesos\CSProcess\</jarExportFolder>
+  <jarExportFolder>E:\protecto_grp3\Proyecto_Grupo3\Procesos\CSProcess\</jarExportFolder>
   <joinCluster>true</joinCluster>
   <nodeString>CS</nodeString>
   <skin>Enterprise</skin>
