--- a/PROYECTO/.settings
+++ b/PROYECTO/.settings
@@ -3,6 +3,9 @@
   <DefaultDB>PROYECTO</DefaultDB>
   <applicationString>PROYECTO</applicationString>
   <applicationVersionString>1</applicationVersionString>
+  <breakpointMap>
+    <breakpoint key="ov.dummy">0</breakpoint>
+  </breakpointMap>
   <databasesMap>
     <databases key="PROYECTO" type=".configdb">
       <dbname>PROYECTO</dbname>
